# distributed-computations-labs

./: CMakeLists.txt
1/: CMakeLists.txt
1/pa1/: main.c
1/src/: main.c
2/: CMakeLists.txt
2/pa2/: main.c  pa23.c  process.c  process.h
3/: CMakeLists.txt
3/pa3/: main.c  process.c
4/: CMakeLists.txt
4/pa4/: main.c  process.c  process.h
5/: CMakeLists.txt
5/pa5/: banking.h  main.c  process.c  process.h
src/: main.c
